# nodo

./: .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: getting-started.md  index.md  quick_references.md
docs/architecture/: application.md  dependency_injection.md  domain.md  infrastructure.md  interface-adapters.md  layers.md  overview.md  project_structure.md  use_cases.md
docs/development/: code_quality.md  contributing.md  setup.md  tech_stack.md  testing.md
docs/user-guide/: downloading.md  preferences.md  searching.md
scripts/: docs.sh
src/nodo/: __init__.py
src/nodo/application/: __init__.py
src/nodo/application/dtos/: __init__.py  download_dto.py  torrent_search_result_dto.py  user_preferences_dto.py
src/nodo/application/interfaces/: __init__.py  aggregator_service.py  aggregator_service_registry.py  download_repository.py  file_system_repository.py  indexer_manager.py  torrent_client.py  user_preferences_repository.py
src/nodo/application/use_cases/: __init__.py  add_download.py  add_favorite_aggregator.py  add_favorite_indexer.py  add_favorite_path.py  get_download_status.py  get_user_preferences.py  list_downloads.py  pause_download.py  refresh_downloads.py  remove_download.py  remove_favorite_aggregator.py  remove_favorite_indexer.py  remove_favorite_path.py  resume_download.py  search_torrents.py  update_user_preferences.py
src/nodo/domain/: __init__.py
src/nodo/domain/entities/: __init__.py  download.py  download_status.py  torrent_search_result.py  user_preferences.py
src/nodo/domain/exceptions/: __init__.py  aggregator_error.py  aggregator_timeout_error.py  domain_exception.py  download_not_found_error.py  duplicate_download_error.py  file_system_error.py  indexer_error.py  invalid_state_transition_error.py  torrent_client_error.py  validation_error.py
src/nodo/domain/value_objects/: __init__.py  aggregator_source.py  download_state.py  download_status.py  file_size.py  indexer_source.py  magnet_link.py  time_duration.py
src/nodo/infrastructure/: docs.py
src/nodo/infrastructure/documentation/: main.py
src/nodo/infrastructure/indexers/: __init__.py  prowlarr_adapter.py
src/nodo/interface_adapters/: __init__.py
src/nodo/interface_adapters/adapters/: __init__.py  prowlarr_indexer_manager.py
src/nodo/interface_adapters/protocols/: __init__.py  prowlarr_source_protocol.py
tests/: __init__.py
tests/nodo/: __init__.py
tests/nodo/application/dtos/: test_user_preferences_dto.py
tests/nodo/domain/entities/: test_user_preferences.py
tests/nodo/domain/value_objects/: test_magnet_link.py
tests/test_nodo/test_application/test_dtos/: test_download_dto.py  test_torrent_search_result_dto.py
tests/test_nodo/test_application/test_use_cases/: test_add_download.py  test_add_favorite_aggregator.py  test_add_favorite_indexer.py  test_add_favorite_path.py  test_get_download_status.py  (+11 more)
tests/test_nodo/test_interface_adapters/: __init__.py  test_indexer_source_adapter.py
(+11 files in other folders)
