[project]
name = "nodo"
version = "0.5.0"
description = "Minimalist torrent download manager"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0,<3",
]

[project.scripts]
nodo-docs = "nodo.infrastructure.documentation.main:main"

# Build system configuration
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/nodo/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/nodo"]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-cov>=7.0.0,<8",
    "ruff>=0.14.8,<1",
    "mkdocs>=1.6.0,<2",
    "mkdocs-material>=9.5.0,<10",
    "mkdocstrings[python]>=0.24.0,<1",
]

# Testing configuration
[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = [
    "E501", # line too long
    "ANN", # flake8 type check
    "N", # pep8 naming convention
    "R", # pylint refactor rules
    "I", # isort
]
ignore = []

# Coverage configuration
[tool.coverage.run]
omit = [
    "src/nodo/infrastructure/documentation/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
